# nvm_checkpoint

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
.kdev4/: ORNL-Check.kdev4
example/: mm.c
include/: Makefile.am  ORNVCR.h  ORNVCR_hashtable.h  ORNVCR_types.h  orhash.h  orhash_constants.h  orhash_types.h
src/: Makefile.am  ornvcr_api.c  ornvcr_api_internal.c  ornvcr_hashtable.c
tests/: Makefile.am  ornvcr_init_test.c  ornvcr_register_test.c
