#
# Copyright 2017        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

bin_PROGRAMS =

COMMON_SOURCES =            \
        ornvcr_api.c

lib_LTLIBRARIES = libornvcr.la
libornvcr_la_SOURCES = $(COMMON_SOURCES)
libornvcr_la_LIBADD =
