#
# Copyright 2017        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

bin_PROGRAMS =              \
    ornvcr_init_test

ornvcr_init_test_SOURCES = ornvcr_init_test.c
ornvcr_init_test_LDADD = ../src/libornvcr.la
